Pass in height to child element - we need to apply aspect ratio to the simulation to make sure it fits within the container, it scales with the window, it doesn’t overflow, and maintains aspect ratio.

--- a/src/components/app.sass
+++ b/src/components/app.sass
@@ -61,7 +61,7 @@
 
         &.simulation
           position: relative
-          min-height: 400px
+          min-height: 50vh
 
         .header
           flex: 0 0 $section-header-height
